fixed build issues and fixed alignment

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -6,5 +6,5 @@
 @import 'footer';
 
 body {
-        padding: 60px 0 30px;
+        padding: 60px 0;
 }
